--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "somos-todos-jao-2017",
   "version": "1.0.0",
-  "description": "FrontEnd client website to manage artists and other stuffs that will presented on 2017 edition of Meu Nome é JÃO Cultural Festival Using HTML5 + VueJS + SASS + Firebase ",
+  "description": "FrontEnd client to manage artists and other stuffs that will presented on 2017 edition of Meu Nome é JÃO Cultural Festival Using HTML5 + Pug + VueJS + SASS + Firebase",
   "author": "Luigui Delyer <luigui.delyer@webradar.com>",
   "private": true,
   "scripts": {
@@ -10,7 +10,12 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "bulma": "^0.3.1",
+    "node-sass": "^4.5.0",
+    "pug": "^2.0.0-beta11",
+    "sass-loader": "^5.0.1",
     "vue": "^2.1.10",
+    "vue-router": "^2.2.0",
     "vuex": "^2.1.2"
   },
   "devDependencies": {
@@ -26,10 +31,10 @@
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.26.1",
     "eslint": "^3.14.1",
+    "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-html": "^2.0.0",
-    "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
@@ -40,16 +45,16 @@
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "semver": "^5.3.0",
     "opn": "^4.0.2",
     "ora": "^1.1.0",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.3.0",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-merge": "^2.6.1"
