--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bulma": "^0.3.1",
     "node-sass": "^4.5.0",
+    "normalize.css": "^5.0.0",
     "pug": "^2.0.0-beta11",
     "sass-loader": "^5.0.1",
     "vue": "^2.1.10",
