--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "bulma": "^0.3.1",
     "node-sass": "^4.5.0",
     "normalize.css": "^5.0.0",
